# manifold-

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DOCKER.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml  wiki.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css  main.jsx
docker/app/: Dockerfile  entrypoint.sh  wait-for.js
docker/cesmii-mock/: Dockerfile  package.json  server.js
docker/i3x-mock/: Dockerfile  server.js
docker/mosquitto/: mosquitto.conf
docker/simulator/: Dockerfile  package.json  sim.js
docs/: RELEASING.md  UI_BACKLOG.md
docs/wiki/: Broker-Setup.md  Getting-Started.md  Historians.md  Home.md  Operations.md  Pipelines-and-Models.md  Tags-and-Sparkplug.md  Troubleshooting.md  _Footer.md  _Sidebar.md
mcp/: index.js  package-lock.json  package.json
native/: Cargo.toml  README.md  bench.js
server/: .env.example  index.js  package-lock.json  package.json
server/routes/: alerts.js  cesmii.js  contracts.js  historians.js  i3x.js  models.js  mqtt.js  opcua.js  pipelines.js  recorder.js  system.js  tags.js  uns.js
server/services/: alertEngine.js  auditLog.js  brokerAdmin.js  cesmiiClient.js  discovery.js  egressGuard.js  graphLayout.js  historianOutbox.js  historians.js  historyStore.js  httpTimeout.js  i3xClient.js  metricsExporter.js  modelEngine.js  mqttManager.js  mqttMatch.js  opcuaManager.js  (+13 more)
site/: index.html
(+80 files in other folders)
